corrected the alignment of the maintenance card

--- a/style.css
+++ b/style.css
@@ -184,6 +184,11 @@ body {
         font-size: 1rem;
         padding: 10px;
     }
+
+    #maintenance-card {
+        margin-left: auto;
+        margin-right: auto;
+    }
 }
 
 @media (max-width: 425px) {
@@ -258,4 +263,5 @@ body {
         font-size: 0.8rem;
         padding: 5px;
     }
+
 }
